<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp" >

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo da instituição" />

  <TextView
  android:id="@+id/txtUNIPE"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginTop="32dp"
  android:text="UNIPÊ"
  android:textSize="20sp"
  android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nome_curso"
        android:textSize="18sp" />



    <TextView
    android:id="@+id/txtDescricao"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:gravity="center"
    android:text="@string/descricao_curta"
    android:textSize="14sp" />


    <Button
        android:id="@+id/btnConheca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_conheca" />

    <Button
        android:id="@+id/btnDisciplinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_disciplinas" />








    </LinearLayout>
